@@ -10,7 +10,7 @@ plugins {
   id 'checkstyle'
   id 'io.spring.dependency-management' version '1.1.4'
   id 'jacoco'
-  id 'org.springframework.boot' version '3.0.13'
+  id 'org.springframework.boot' version '3.1.8'
   id 'org.owasp.dependencycheck' version '9.0.5'
   id 'org.sonarqube' version '4.4.1.3373'
   id 'pmd'
@@ -190,15 +190,15 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
   implementation group: 'com.azure', name: 'azure-storage-blob', version: '12.25.1'
   implementation group: 'com.jayway.jsonpath', name: 'json-path', version: '2.8.0'
-  implementation group: 'com.vladmihalcea', name: 'hibernate-types-60', version: '2.21.1'
+  implementation group: 'io.hypersistence', name: 'hypersistence-utils-hibernate-62', version: '3.7.0'
   implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.3.0'
   implementation group: 'com.google.guava', name: 'guava', version: '32.1.3-jre'
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: reformLoggingVersion
   implementation group: 'com.github.hmcts.java-logging', name: 'logging-appinsights', version: reformLoggingVersion
   implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '7.4'
-  implementation 'com.networknt:json-schema-validator:1.0.83'
+  implementation 'com.networknt:json-schema-validator:1.3.0'
   implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.0'
-  implementation group: 'com.github.hmcts', name: 'pip-data-models', version: '2.1.16'
+  implementation group: 'com.github.hmcts', name: 'pip-data-models', version: '2.1.17'
   implementation 'org.springframework.boot:spring-boot-starter-validation'
   implementation 'org.springframework.boot:spring-boot-starter-jdbc'
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -213,7 +213,7 @@ dependencies {
   implementation group: 'org.flywaydb', name: 'flyway-core', version: '10.1.0'
   implementation group: 'org.flywaydb', name: 'flyway-database-postgresql', version: '10.1.0'
 
-  // Force upgrade snakeyaml version for CVE-2022-38752
+  // Force upgrade snakeyaml version for CVE-2022-1471
   implementation( group: 'org.yaml', name: 'snakeyaml').version {
     strictly("2.0")
   }
@@ -228,12 +228,19 @@ dependencies {
   testImplementation group: 'org.springframework.security', name: 'spring-security-test'
   testImplementation group: 'io.github.hakky54', name: 'logcaptor', version: '2.9.2'
   testImplementation group: 'org.apiguardian', name: 'apiguardian-api', version: '1.1.2'
+  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.0', classifier: 'all'
 
   functionalTestImplementation sourceSets.main.runtimeClasspath
   functionalTestImplementation sourceSets.test.runtimeClasspath
 
   smokeTestImplementation sourceSets.main.runtimeClasspath
   smokeTestImplementation sourceSets.test.runtimeClasspath
+}
+
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 bootJar {
